Copy firmware.hex to root dir on build

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ env_default = megaatmega2560
 
 [common]
 lib_deps = U8glib@1.19.1
+extra_scripts = post:extra_script.py
 
 [env:megaatmega2560]
 platform = atmelavr
@@ -28,6 +29,7 @@ board = megaatmega2560
 build_flags = -I $BUILDSRC_DIR
 board_f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:megaatmega1280]
 platform = atmelavr
@@ -36,6 +38,7 @@ board = megaatmega1280
 build_flags = -I $BUILDSRC_DIR
 board_f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:printrboard]
 platform = teensy
@@ -45,6 +48,7 @@ build_flags = -I $BUILDSRC_DIR -D MOTHERBOARD=BOARD_PRINTRBOARD
 # Bug in arduino framework does not allow boards running at 20Mhz
 #board_f_cpu = 20000000L
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:printrboard_revf]
 platform = teensy
@@ -52,6 +56,7 @@ framework = arduino
 board = teensy20pp
 build_flags = -I $BUILDSRC_DIR -D MOTHERBOARD=BOARD_PRINTRBOARD_REVF
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:brainwavepro]
 platform = teensy
@@ -59,6 +64,7 @@ framework = arduino
 board = teensy20pp
 build_flags = -I $BUILDSRC_DIR -D MOTHERBOARD=BOARD_BRAINWAVE_PRO
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:rambo]
 platform = atmelavr
@@ -67,6 +73,7 @@ board = reprap_rambo
 build_flags = -I $BUILDSRC_DIR
 board_f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:anet10]
 platform = atmelavr
@@ -74,9 +81,11 @@ framework = arduino
 board = sanguino_atmega1284p
 upload_speed = 57600
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
 
 [env:sanguino_atmega644p]
 platform = atmelavr
 framework = arduino
 board = sanguino_atmega644p
 lib_deps = ${common.lib_deps}
+extra_scripts = ${common.extra_scripts}
