--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 
 # Our automatic versioning scheme generates the following file
 # NEVER put it in the repository
-_Version.h
+# _Version.h
 
 #
 # OS
