--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@
 
 [platformio]
 src_dir = Marlin
-envs_dir = .pioenvs
+; envs_dir = .pioenvs
 lib_dir = .piolib
 libdeps_dir = .piolibdeps
-env_default = megaatmega2560
+default_envs = megaatmega2560
 
 [common]
 lib_deps = U8glib@1.19.1
@@ -27,7 +27,7 @@ platform = atmelavr
 framework = arduino
 board = megaatmega2560
 build_flags = -I $BUILDSRC_DIR
-board_f_cpu = 16000000L
+board_build.f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
 extra_scripts = ${common.extra_scripts}
 
@@ -36,7 +36,7 @@ platform = atmelavr
 framework = arduino
 board = megaatmega1280
 build_flags = -I $BUILDSRC_DIR
-board_f_cpu = 16000000L
+board_build.f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
 extra_scripts = ${common.extra_scripts}
 
@@ -46,7 +46,7 @@ framework = arduino
 board = teensy20pp
 build_flags = -I $BUILDSRC_DIR -D MOTHERBOARD=BOARD_PRINTRBOARD
 # Bug in arduino framework does not allow boards running at 20Mhz
-#board_f_cpu = 20000000L
+#board_build.f_cpu = 20000000L
 lib_deps = ${common.lib_deps}
 extra_scripts = ${common.extra_scripts}
 
@@ -71,7 +71,7 @@ platform = atmelavr
 framework = arduino
 board = reprap_rambo
 build_flags = -I $BUILDSRC_DIR
-board_f_cpu = 16000000L
+board_build.f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
 extra_scripts = ${common.extra_scripts}
 
