--- a/ini/features.ini
+++ b/ini/features.ini
@@ -95,6 +95,7 @@ MALYAN_LCD                             = src_filter=+<src/lcd/extui/malyan>
 NEXTION_TFT                            = src_filter=+<src/lcd/extui/nextion>
 USE_UHS2_USB                           = src_filter=+<src/sd/usb_flashdrive/lib-uhs2>
 USE_UHS3_USB                           = src_filter=+<src/sd/usb_flashdrive/lib-uhs3>
+USE_CH376_USB                           = src_filter=+<src/sd/usb_flashdrive/lib-ch376>
 USB_FLASH_DRIVE_SUPPORT                = src_filter=+<src/sd/usb_flashdrive/Sd2Card_FlashDrive.cpp>
 HAS_MCP3426_ADC                        = src_filter=+<src/feature/adc> +<src/gcode/feature/adc>
 AUTO_BED_LEVELING_BILINEAR             = src_filter=+<src/feature/bedlevel/abl>
